--- a/contact.html
+++ b/contact.html
@@ -14,12 +14,12 @@
     </orderd>
     <hr  noshade="">
     <form action="">
-        <label>Your Name:</label>
+        <label>Your Name:</label><br>
         <input type="text"><br>
-        <label>Your Email:</label>
+        <label>Your Email:</label><br>
         <input type="email"><br>
         <label>Your Message</label><br>
-        <textarea name="name" id="" cols="30" rows="10"></textarea><br>
+        <textarea name="name" id="" cols="18" rows="1"></textarea><br>
         <input type="submit">
     </form>
 </body>
