--- a/index.html
+++ b/index.html
@@ -12,22 +12,38 @@
     <hr size="6" noshade="">
     <table cellspacing="20">
         <tr>
-            <td><img src="tarun1.jpg" width="100" height="100"></td>
             <td>
-                <h2>Tushar Sharma</h2>
-                <p>Doubt Solver at Codechef || 4⭐ at codechef(Max rating:-1870) || Competitive Programming || C++ !
-                    Student -B.tech
-                    at University College of Engineering and Technology, Bikaner</p>
+                <table>
+                    <tr>
+                        <img src="tarun1.png" height="" width="150">
+                    </tr>
+                    <tr>
+                        <h4 align="center">Tushar Sharma</h4>
+                    </tr>
+                </table>
             </td>
+
+            <td>Doubt Solver at Codechef || 4⭐ at codechef(Max rating:-1870) || Competitive Programming || C++ !
+                Student -B.tech
+                at University College of Engineering and Technology, Bikaner</td>
         </tr>
         <tr>
-            <td></td>
-            <td> <a href="contact.html">Contact</a></td>
+            <h2>My Social Media</h2>
+            <table cellspacing="">
+
+
+                <td><img src="link.png" width="20"></td>
+                <td><a href="https://www.linkedin.com/in/tushar-sharma-a03151177/">Linkedin</a></td>
+                <td><img src="insta.jpg" width="20"></td>
+                <td ><a href="https://www.instagram.com/t.a.r.u.n.01/">Instagram</a></td>
+                <td><img src="twi.png" alt="" width="20"></td>
+                <td><a href="https://twitter.com/Tushar171977">Twitter</a></td>
+                <td><img src="cont.png" width="20" alt=""></td>
+                <td><a href="contact.html">Contact</a></td>
+
         </tr>
-        <tr>
-            <td></td>
-            <td><a href="social-media.html">Social_Media</a></td>
-        </tr>
+    </table>
+    </tr>
     </table>
     <hr size="6" noshade="">
     <hr size="2" noshade="">
@@ -54,7 +70,7 @@
 
 
                 </tr>
-                <tr al>
+                <tr>
                     <td>2018</td>
                     <td>Class XII</td>
                     <td>Mittal International School
@@ -80,7 +96,7 @@
     </strong>
     <table cellspacing="10">
         <tr>
-            <tr>
+        <tr>
             <td>C++</td>
             <td>⭐⭐⭐⭐ </td>
         </tr>
