--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <td>
                 <table>
                     <tr>
-                        <img src="tarun1.png" height="" width="150">
+                        <img src="Images/tarun1.png" height="" width="150">
                     </tr>
                     <tr>
                         <h4 align="center">Tushar Sharma</h4>
@@ -32,13 +32,13 @@
             <table cellspacing="">
 
 
-                <td><img src="link.png" width="20"></td>
+                <td><img src="Images/link.png" width="20"></td>
                 <td><a href="https://www.linkedin.com/in/tushar-sharma-a03151177/">Linkedin</a></td>
-                <td><img src="insta.jpg" width="20"></td>
+                <td><img src="Images/insta.jpg" width="20"></td>
                 <td ><a href="https://www.instagram.com/t.a.r.u.n.01/">Instagram</a></td>
-                <td><img src="twi.png" alt="" width="20"></td>
+                <td><img src="Images/twi.png" alt="" width="20"></td>
                 <td><a href="https://twitter.com/Tushar171977">Twitter</a></td>
-                <td><img src="cont.png" width="20" alt=""></td>
+                <td><img src="Images/cont.png" width="20" alt=""></td>
                 <td><a href="contact.html">Contact</a></td>
 
         </tr>
