--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profile</title>
+    <title>Profile</title> 
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
@@ -18,7 +19,8 @@
                         <img src="Images/tarun1.png" height="" width="150">
                     </tr>
                     <tr>
-                        <h4 align="center">Tushar Sharma</h4>
+                        <strong>
+                        <h3 align="center">Tushar Sharma</h4></strong>
                     </tr>
                 </table>
             </td>
@@ -28,14 +30,13 @@
                 at University College of Engineering and Technology, Bikaner</td>
         </tr>
         <tr>
-            <h2>My Social Media</h2>
             <table cellspacing="">
 
 
                 <td><img src="Images/link.png" width="20"></td>
                 <td><a href="https://www.linkedin.com/in/tushar-sharma-a03151177/">Linkedin</a></td>
                 <td><img src="Images/insta.jpg" width="20"></td>
-                <td ><a href="https://www.instagram.com/t.a.r.u.n.01/">Instagram</a></td>
+                <td><a href="https://www.instagram.com/t.a.r.u.n.01/">Instagram</a></td>
                 <td><img src="Images/twi.png" alt="" width="20"></td>
                 <td><a href="https://twitter.com/Tushar171977">Twitter</a></td>
                 <td><img src="Images/cont.png" width="20" alt=""></td>
@@ -46,7 +47,6 @@
     </tr>
     </table>
     <hr size="6" noshade="">
-    <hr size="2" noshade="">
     <strong>
         <h3>Educational Qualification</h3>
     </strong>
