--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile</title> 
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -25,7 +25,7 @@
                 </table>
             </td>
 
-            <td>Doubt Solver at Codechef || 4⭐ at codechef(Max rating:-1870) || Competitive Programming || C++ !
+            <td class="p">Doubt Solver at Codechef || 4⭐ at codechef(Max rating:-1870) || Competitive Programming || C++ !
                 Student -B.tech
                 at University College of Engineering and Technology, Bikaner</td>
         </tr>
@@ -52,14 +52,14 @@
     </strong>
     <table>
         <table border="1">
-            <thead>
+            <thead class="t1" >
                 <th>Year </th>
                 <th> Degree/Examination</th>
                 <th> Institution/Board</th>
                 <th> CGPA/Percentage</th>
 
             </thead>
-            <tbody align="center">
+            <tbody align="center" class="t2">
 
                 <tr>
 
