--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <h1>My Contact Details</h1>
@@ -21,7 +21,7 @@
         <input type="email"><br>
         <label>Your Message</label><br>
         <textarea name="name" id="" cols="18" rows="1"></textarea><br>
-        <input type="submit">
+        <input class="so" type="submit">
     </form>
 </body>
 </html>
