--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profile</title> 
+    <title>Profile</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -14,33 +14,35 @@
     <table cellspacing="20">
         <tr>
             <td>
-                <table>
+                <table >
                     <tr>
-                        <img src="Images/tarun1.png" height="" width="150">
+                        <img  src=" Images/tarun1.png" height="" width="150">
                     </tr>
-                    <tr>
+                    <tr >
                         <strong>
-                        <h3 align="center">Tushar Sharma</h4></strong>
+                            <h3 align="center" style="text-decoration:underline">Tushar Sharma</h4>
+                        </strong>
                     </tr>
                 </table>
             </td>
 
-            <td class="p">Doubt Solver at Codechef || 4⭐ at codechef(Max rating:-1870) || Competitive Programming || C++ !
+            <td class="p">Doubt Solver at Codechef || 4⭐ at codechef(Max rating:-1870) || Competitive Programming || C++
+                !
                 Student -B.tech
                 at University College of Engineering and Technology, Bikaner</td>
         </tr>
         <tr>
-            <table cellspacing="">
+            <table  cellspacing="">
 
 
                 <td><img src="Images/link.png" width="20"></td>
-                <td><a href="https://www.linkedin.com/in/tushar-sharma-a03151177/">Linkedin</a></td>
-                <td><img src="Images/insta.jpg" width="20"></td>
-                <td><a href="https://www.instagram.com/t.a.r.u.n.01/">Instagram</a></td>
+                <td ><a class="so" href="https://www.linkedin.com/in/tushar-sharma-a03151177/">Linkedin</a></td>
+                <td ><img src="Images/insta.jpg" width="20"></td>
+                <td ><a class="so" href="https://www.instagram.com/t.a.r.u.n.01/" >Instagram</a></td>
                 <td><img src="Images/twi.png" alt="" width="20"></td>
-                <td><a href="https://twitter.com/Tushar171977">Twitter</a></td>
+                <td ><a class="so" href="https://twitter.com/Tushar171977">Twitter</a></td>
                 <td><img src="Images/cont.png" width="20" alt=""></td>
-                <td><a href="contact.html">Contact</a></td>
+                <td ><a class="so" href="contact.html">Contact</a></td>
 
         </tr>
     </table>
@@ -52,7 +54,7 @@
     </strong>
     <table>
         <table border="1">
-            <thead class="t1" >
+            <thead class="t1">
                 <th>Year </th>
                 <th> Degree/Examination</th>
                 <th> Institution/Board</th>
@@ -118,6 +120,23 @@
         <li><a href="https://www.codechef.com/users/tarun_171977">4 Star At CodeChef</a></li>
         <li><a href="https://www.hackerrank.com/tarunsharma17191">5 Star At HackerRank</a></li>
     </ol>
+    <h3>Extracurricular Activities</h3>
+    <ul>
+        <h4>Social Activities:</h4>
+        <li>Winner in Teasure Hunt at Techfest Ahbivykati 2k20, took part in several social activities atUCET.</li>
+        <li>Volunteer at Mittal International School, took part in several social activities at Mittal
+            International School such as tree plantation. </li>
+           <li> <h4>Deloittle STEM Connect Virtual Experience Program(2022) - (5 hours approx)
+                Participated in the open access Deloittle STEM Virtual Experience Programwith Forage. </h4></li>
+            <h4> Task completed</h4>
+            <ul>
+                <li>Coding</li>
+                <li>Data Analysis </li>
+                <li>Cyber Security</li>
+        
+            </ul>
+    </ul>
+   
 
 
 
