--- a/index.html
+++ b/index.html
@@ -11,43 +11,45 @@
 
 <body>
     <hr size="6" noshade="">
-    <table cellspacing="20">
-        <tr>
-            <td>
-                <table >
-                    <tr>
-                        <img  src=" Images/tarun1.png" height="" width="150">
-                    </tr>
-                    <tr >
-                        <strong>
-                            <h3 align="center" style="text-decoration:underline">Tushar Sharma</h4>
-                        </strong>
-                    </tr>
-                </table>
-            </td>
+    <div>
+        <table>
+            <tr>
+                <td>
+                    <table>
+                        <td><img id="hp" src=" Images/tarun1.png">
+                            <h3 id="name">Tushar Sharma</h3>
+                        </td>
+                    </table>
+                </td>
+                <td>
+                    <table class="p">
+                        <tr >
+                            <td id="bio"> Doubt Solver at Codechef || 4⭐ at codechef(Max rating:-1870) ||Competitive Programming
+                                ||
+                                C++|| Student -B.tech at University College of Engineering and Technology, Bikaner </td>
+                        </tr>
+                        <td>
+                            <table id="social">
+                                <tr>
+                                    <td> <img src="Images/link.png" width="20"></td>
+                                    <td> <a class="so" href="https://www.linkedin.com/in/tushar-sharma-a03151177/">Linkedin</a></td>
+                                    <td><img src="Images/insta.jpg" width="20"></td>
+                                    <td> <a class="so" href="https://www.instagram.com/t.a.r.u.n.01/">Instagram</a></td>
+                                    <td><img src="Images/twi.png" alt="" width="20"></td>
+                                    <td> <a class="so" href="https://twitter.com/Tushar171977">Twitter</a></td>
+                                    <td><img src="Images/cont.png" width="20" alt=""></td>
+                                    <td><a class="so" href="contact.html">Contact</a></td>
+                                </tr>
+                            </table>
+                        </td>
+                    </table>
 
-            <td class="p">Doubt Solver at Codechef || 4⭐ at codechef(Max rating:-1870) || Competitive Programming || C++
-                !
-                Student -B.tech
-                at University College of Engineering and Technology, Bikaner</td>
-        </tr>
-        <tr>
-            <table  cellspacing="">
+                </td>
+            </tr>
+        </table>
 
 
-                <td><img src="Images/link.png" width="20"></td>
-                <td ><a class="so" href="https://www.linkedin.com/in/tushar-sharma-a03151177/">Linkedin</a></td>
-                <td ><img src="Images/insta.jpg" width="20"></td>
-                <td ><a class="so" href="https://www.instagram.com/t.a.r.u.n.01/" >Instagram</a></td>
-                <td><img src="Images/twi.png" alt="" width="20"></td>
-                <td ><a class="so" href="https://twitter.com/Tushar171977">Twitter</a></td>
-                <td><img src="Images/cont.png" width="20" alt=""></td>
-                <td ><a class="so" href="contact.html">Contact</a></td>
-
-        </tr>
-    </table>
-    </tr>
-    </table>
+    </div>
     <hr size="6" noshade="">
     <strong>
         <h3>Educational Qualification</h3>
@@ -117,8 +119,8 @@
     <h3>Achivements</h3>
 
     <ol>
-        <li><a href="https://www.codechef.com/users/tarun_171977">4 Star At CodeChef</a></li>
-        <li><a href="https://www.hackerrank.com/tarunsharma17191">5 Star At HackerRank</a></li>
+        <li><a class="so" href="https://www.codechef.com/users/tarun_171977">4 Star At CodeChef</a></li>
+        <li><a class="so" href="https://www.hackerrank.com/tarunsharma17191">5 Star At HackerRank</a></li>
     </ol>
     <h3>Extracurricular Activities</h3>
     <ul>
@@ -126,17 +128,19 @@
         <li>Winner in Teasure Hunt at Techfest Ahbivykati 2k20, took part in several social activities atUCET.</li>
         <li>Volunteer at Mittal International School, took part in several social activities at Mittal
             International School such as tree plantation. </li>
-           <li> <h4>Deloittle STEM Connect Virtual Experience Program(2022) - (5 hours approx)
-                Participated in the open access Deloittle STEM Virtual Experience Programwith Forage. </h4></li>
-            <h4> Task completed</h4>
-            <ul>
-                <li>Coding</li>
-                <li>Data Analysis </li>
-                <li>Cyber Security</li>
-        
-            </ul>
+        <li>
+            <h4>Deloittle STEM Connect Virtual Experience Program(2022) - (5 hours approx)
+                Participated in the open access Deloittle STEM Virtual Experience Programwith Forage. </h4>
+        </li>
+        <h4> Task completed</h4>
+        <ul>
+            <li>Coding</li>
+            <li>Data Analysis </li>
+            <li>Cyber Security</li>
+
+        </ul>
     </ul>
-   
+
 
 
 
