divide the section

--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,21 +8,31 @@
     <title>Contact</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    <h1>My Contact Details</h1>
-    <orderd>
-        <li>Mobile No. :8955598492 </li>
-        <li>Email : tarunhsarma171977@gmail.com</li>
-    </orderd>
-    <hr  noshade="">
-    <form action="">
-        <label>Your Name:</label><br>
-        <input type="text"><br>
-        <label>Your Email:</label><br>
-        <input type="email"><br>
-        <label>Your Message</label><br>
-        <textarea name="name" id="" cols="18" rows="1"></textarea><br>
-        <input class="so" type="submit">
-    </form>
+    <div>
+        <hr>
+        <h1 id="my">My Contact Details</h1>
+        <orderd>
+            <li>Mobile No. :8955598492 </li>
+            <li>Email : tarunhsarma171977@gmail.com</li>
+        </orderd>
+    </div>
+    <div>
+        <hr>
+
+        <h3>Your Feedback</h3>
+        <form action="mailto:tarunsharma171977@gmail.com">
+            <li> <label>Your Name:</label></li>
+            <input type="text" style="margin-left: 20px;">
+            <li> <label>Your Email:</label></li>
+            <input type="email" style="margin-left: 20px;">
+            <li><label>Your Message</label></li>
+            <textarea name="name" id="" cols="18" rows="1" style="margin-left: 20px;"></textarea><br>
+            <input class="so" type="submit" style="margin-left: 20px;">
+        </form>
+        <hr>
+    </div>
 </body>
+
 </html>
