--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-    <hr size="6" noshade="">
     <div>
+        <hr size="6" noshade="">
         <table>
             <tr>
                 <td>
@@ -23,8 +23,9 @@
                 </td>
                 <td>
                     <table class="p">
-                        <tr >
-                            <td id="bio"> Doubt Solver at Codechef || 4⭐ at codechef(Max rating:-1870) ||Competitive Programming
+                        <tr>
+                            <td id="bio"> Doubt Solver at Codechef || 4⭐ at codechef(Max rating:-1870) ||Competitive
+                                Programming
                                 ||
                                 C++|| Student -B.tech at University College of Engineering and Technology, Bikaner </td>
                         </tr>
@@ -32,7 +33,9 @@
                             <table id="social">
                                 <tr>
                                     <td> <img src="Images/link.png" width="20"></td>
-                                    <td> <a class="so" href="https://www.linkedin.com/in/tushar-sharma-a03151177/">Linkedin</a></td>
+                                    <td> <a class="so"
+                                            href="https://www.linkedin.com/in/tushar-sharma-a03151177/">Linkedin</a>
+                                    </td>
                                     <td><img src="Images/insta.jpg" width="20"></td>
                                     <td> <a class="so" href="https://www.instagram.com/t.a.r.u.n.01/">Instagram</a></td>
                                     <td><img src="Images/twi.png" alt="" width="20"></td>
@@ -48,103 +51,112 @@
             </tr>
         </table>
 
+        <hr size="6" noshade="">
+    </div>
+    <div>
+        <strong>
+            <h3>Educational Qualification</h3>
+        </strong>
+        <table>
+            <table border="1">
+                <thead class="t1">
+                    <th>Year </th>
+                    <th> Degree/Examination</th>
+                    <th> Institution/Board</th>
+                    <th> CGPA/Percentage</th>
+
+                </thead>
+                <tbody align="center" class="t2">
+
+                    <tr>
+
+                        <td>2019-Present</td>
+                        <td>B.Tech- CSE</td>
+                        <td>University College of Engineering &Technology, Bikaner</td>
+                        <td>8.20</td>
+
+
+                    </tr>
+                    <tr>
+                        <td>2018</td>
+                        <td>Class XII</td>
+                        <td>Mittal International School
+                            Kota, CBSE</td>
+                        <td>60%</td>
+
+                    </tr>
+                    <tr>
+                        <td>2016</td>
+                        <td>Class X</td>
+                        <td>Mittal International School
+                            Kota, CBSE</td>
+                        <td>8.2</td>
+
+                    </tr>
+                </tbody>
+
+            </table>
+        </table>
+        <hr size="2" noshade="">
+    </div>
+    <div>
+        <strong>
+            <h3>Work Experience</h3>
+        </strong>
+        <p>Doubt Solver at CodeChef</p>
 
     </div>
-    <hr size="6" noshade="">
-    <strong>
-        <h3>Educational Qualification</h3>
-    </strong>
-    <table>
-        <table border="1">
-            <thead class="t1">
-                <th>Year </th>
-                <th> Degree/Examination</th>
-                <th> Institution/Board</th>
-                <th> CGPA/Percentage</th>
+    <div>
+        <hr>
+        <strong>
+            <h3>Technical Skills and Certifications</h3>
+        </strong>
+        <table cellspacing="10">
+            <tr>
+            <tr>
+                <td>C++</td>
+                <td>⭐⭐⭐⭐ </td>
+            </tr>
+            <tr>
+                <td>Technical Analysis</td>
+                <td>⭐⭐⭐⭐</td>
+            </tr>
+            <tr>
+                <td>Web Development</td>
+                <td>⭐⭐</td>
+            </tr>
 
-            </thead>
-            <tbody align="center" class="t2">
-
-                <tr>
-
-                    <td>2019-Present</td>
-                    <td>B.Tech- CSE</td>
-                    <td>University College of Engineering &Technology, Bikaner</td>
-                    <td>8.20</td>
-
-
-                </tr>
-                <tr>
-                    <td>2018</td>
-                    <td>Class XII</td>
-                    <td>Mittal International School
-                        Kota, CBSE</td>
-                    <td>60%</td>
-
-                </tr>
-                <tr>
-                    <td>2016</td>
-                    <td>Class X</td>
-                    <td>Mittal International School
-                        Kota, CBSE</td>
-                    <td>8.2</td>
-
-                </tr>
-            </tbody>
-
+            </tr>
         </table>
-    </table>
-    <hr size="2" noshade="">
-    <strong>
-        <h3>Technical Skills and Certifications</h3>
-    </strong>
-    <table cellspacing="10">
-        <tr>
-        <tr>
-            <td>C++</td>
-            <td>⭐⭐⭐⭐ </td>
-        </tr>
-        <tr>
-            <td>Technical Analysis</td>
-            <td>⭐⭐⭐⭐</td>
-        </tr>
-        <tr>
-            <td>Web Development</td>
-            <td>⭐⭐</td>
-        </tr>
+        <hr size="2" noshade="">
+    </div>
+    <div>
+        <h3>Achivements</h3>
 
-        </tr>
-    </table>
-    <hr size="2" noshade="">
-    <h3>Achivements</h3>
-
-    <ol>
-        <li><a class="so" href="https://www.codechef.com/users/tarun_171977">4 Star At CodeChef</a></li>
-        <li><a class="so" href="https://www.hackerrank.com/tarunsharma17191">5 Star At HackerRank</a></li>
-    </ol>
-    <h3>Extracurricular Activities</h3>
-    <ul>
-        <h4>Social Activities:</h4>
-        <li>Winner in Teasure Hunt at Techfest Ahbivykati 2k20, took part in several social activities atUCET.</li>
-        <li>Volunteer at Mittal International School, took part in several social activities at Mittal
-            International School such as tree plantation. </li>
-        <li>
-            <h4>Deloittle STEM Connect Virtual Experience Program(2022) - (5 hours approx)
-                Participated in the open access Deloittle STEM Virtual Experience Programwith Forage. </h4>
-        </li>
-        <h4> Task completed</h4>
+        <ol>
+            <li><a class="so" href="https://www.codechef.com/users/tarun_171977">4 Star At CodeChef</a></li>
+            <li><a class="so" href="https://www.hackerrank.com/tarunsharma17191">5 Star At HackerRank</a></li>
+        </ol>
+        <h3>Extracurricular Activities</h3>
         <ul>
-            <li>Coding</li>
-            <li>Data Analysis </li>
-            <li>Cyber Security</li>
+            <h4>Social Activities:</h4>
+            <li>Winner in Teasure Hunt at Techfest Ahbivykati 2k20, took part in several social activities atUCET.</li>
+            <li>Volunteer at Mittal International School, took part in several social activities at Mittal
+                International School such as tree plantation. </li>
+            <li>
+                <h4>Deloittle STEM Connect Virtual Experience Program(2022) - (5 hours approx)
+                    Participated in the open access Deloittle STEM Virtual Experience Programwith Forage. </h4>
+            </li>
+            <h4> Task completed</h4>
+            <ul>
+                <li>Coding</li>
+                <li>Data Analysis </li>
+                <li>Cyber Security</li>
 
+            </ul>
         </ul>
-    </ul>
-
-
-
-
-    <hr size="2" noshade="">
+        <hr size="2" noshade="">
+    </div>
 
 </body>
 
